# scl-melody-launcher

./: Cargo.toml  README.md  build.rs
assets/: background.avif
src/: main.rs
